# plymaket

./: DOCS_INDEX.md
polymarket-ai/: .env.example  .gitignore  AUDIT_FIX_REPORT.md  DOCUMENT_PACKAGE_MANIFEST.json  EIGHTH_AUDIT_REPORT.md  ELEVENTH_AUDIT_REPORT.md  FIFTH_AUDIT_FIX_REPORT.md  FOURTH_AUDIT_FIX_REPORT.md  PHASE0_PILOT_REPORT.md  README.md  SECOND_AUDIT_FIX_REPORT.md  SEVENTH_AUDIT_FIX_REPORT.md  SIXTH_AUDIT_FIX_REPORT.md  TENTH_AUDIT_REPORT.md  THIRTEENTH_AUDIT_REPORT.md  TWELFTH_AUDIT_REPORT.md  pyproject.toml
polymarket-ai/docs/: 03_DATA_CONTRACTS_AND_PROVENANCE.md  07_ROADMAP_AND_PROGRESS.md  09_HANDOVER_GUIDE.md
polymarket-ai/docs/adr/: ADR-0002-APPEND-ONLY-EVENT-HISTORY.md
polymarket-ai/phase0/: atomic_write.py  audit.py  blind_forecast_runner.py  canonical.py  cli.py  clob_provider.py  evaluate.py  forecast_lock.py  forecast_runner.py  hybrid_baseline_provider.py  local_model_provider.py  manifest.py  market_universe.py  package_validator.py  pilot_runner.py  polymarket_client.py  price_reveal.py  price_reveal_service.py  primary_model_provider.py  real_model_provider.py  real_pilot.py  sampling.py  schemas.py  state.py  temporal.py
polymarket-ai/tests/: test_atomic_write.py  test_audit15.py  test_audit16.py  test_audit17.py  test_audit18.py  test_eighth_round.py  test_end_to_end.py  test_evaluate.py  test_forecast_lock.py  test_manifest.py  test_market_identity.py  test_package_firewall.py  test_price_reveal.py  test_schema.py  test_seventh_round.py  test_sixth_round.py  test_state_machine.py  test_temporal_integrity.py
(+59 files in other folders)
