[project]
name = "polymarket-ai"
version = "0.1.0"
description = "Phase 0 Feasibility Probe for Polymarket AI Forecasting System"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "typer>=0.9",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-env>=1.0",
]

[project.scripts]
polymarket-ai = "phase0.cli:main"

[tool.setuptools.packages.find]
include = ["phase0*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
